--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@kyvg/vue3-notification": "^2.9.0",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13"
